--- a/config.ini
+++ b/config.ini
@@ -14,4 +14,9 @@ release = 40
 
 [Responder]
 
-responder = {rpd1: 'mouse', rpd2: 'keyboard'}
+responder_device = mouse left down
+#responder_device = spacebar
+
+[Timeout]
+# described in chapter 3.1
+timeout = 2
