Add standard frequencies

--- a/config.ini
+++ b/config.ini
@@ -3,6 +3,10 @@
 # http://python-sounddevice.readthedocs.org/en/0.3.3/#sounddevice.query_devices
 device = 0
 
+[Beginning Earside]
+
+earside = right
+
 [AudiometerCalibration]
 
 calibration_factor = 1
@@ -20,3 +24,18 @@ responder_device = mouse left down
 [Timeout]
 # described in chapter 3.1
 timeout = 2
+
+[Standard Frequencies]
+# DIN IEC 60645-1 chapter 6 table 2
+
+freqs = 125
+        250
+        500
+        750
+        1000
+        1500
+        2000
+        3000
+        4000
+        6000
+        8000
