--- a/config.ini
+++ b/config.ini
@@ -1,41 +1,36 @@
-[Device]
 # How to select your soundcard is shown here:
 # http://python-sounddevice.readthedocs.org/en/0.3.3/#sounddevice.query_devices
 device = 0
 
-[Beginning Earside]
-
-earside = right
-
-[AudiometerCalibration]
-
 calibration_factor = 1
-
-[FadeIn/FadeOut Time]
-# milliseconds
-attack = 30
-release = 40
-
-[Responder]
 
 responder_device = mouse left down
 #responder_device = spacebar
 
-[Timeout]
-# described in chapter 3.1
+# milliseconds
+attack = 30
+release = 40
+
+# seconds
 timeout = 2
 
-[Standard Frequencies]
-# DIN IEC 60645-1 chapter 6 table 2
+earside = right
 
-freqs = 125
-        250
-        500
-        750
-        1000
+increase_5db = 5
+increase_10db = 10
+decrease_10db = 10
+decrease_20db = 20
+start_level_familiar = -40
+
+# DIN IEC 60645-1 chapter 6 table 2
+freqs = 1000
         1500
         2000
         3000
         4000
         6000
         8000
+        750
+        500
+        250
+        125
